--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
     </main>
 
     <footer class="footer">
-      <div class="container">
+      <div class="container footer-container">
           <a class="footer-link" href="./index.html">Web<span class="logo-clr">Studio</span></a>
           <p class="footer-text">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
       </div>
